Remove default prompt

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     </div>
     <div id="bottom">
       <form method="post" action="/ollama" id="promptForm">
-        <textarea name="prompt" id="prompt">Who is Nintendo's Super Mario?</textarea>
+        <textarea name="prompt" id="prompt"></textarea>
         <button type="submit">Submit</button>
       </form>
     </div>
